Refactoring.
Signed-off-by: Gentjan Kolicaj <gentjankolicaj@yahoo.com>